Fix for bug #7210: information_schema: can't access when table-name = reserved word